syntax = "proto2";

package grannyroomba.messages;

import "Stop.proto";
import "DrivePosition.proto";
import "DriveVelocity.proto";
import "CommandStatus.proto";

option java_package = "org.flupes.ljf.grannyroomba.messages";
option java_outer_classname = "LocomotionProto";

message LocomotionCmd {

	enum Command {
		STOP = 1;
		DRIVE_POSITION = 2;
		DRIVE_VELOCITY = 3;
		STATUS_REQUEST = 4;
	}

	required Command cmd = 1;

	optional StopMsg stop = 2;
	optional DrivePositionMsg drivePosition = 3;
	optional DriveVelocityMsg driveVelocity = 4;
	optional RequestStatus statusRequest = 5;

}